--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,24 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '23.0.2'
+    signingConfigs {
+        config {
+            keyAlias 'rashjz'
+            keyPassword 'parket470'
+            storeFile file('C:/Users/Rashad/Dropbox/other/and cert/rashcert.jks')
+            storePassword 'parket470'
+        }
+    }
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
     useLibrary 'org.apache.http.legacy'
-
     defaultConfig {
         applicationId "rashjz.info.bakuposter.com"
         minSdkVersion 16
-        targetSdkVersion 23
-        versionCode 11
-        versionName "3.8"
+        targetSdkVersion 26
+        versionCode 13
+        versionName "3.9"
+        multiDexEnabled = true
     }
     buildTypes {
         release {
@@ -18,19 +26,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 repositories {
     mavenCentral()
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-//    compile files('libs/YouTubeAndroidPlayerApi.jar')
-//    compile files('libs/gcm.jar')
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    //    compile files('libs/YouTubeAndroidPlayerApi.jar')
+    //    compile files('libs/gcm.jar')
+    //    compile 'com.android.support:appcompat-v7:25.0.0'
+    //noinspection GradleCompatible
+    compile 'com.android.support:appcompat-v7:26.0.2'
+    compile 'com.android.support:design:26.0.2'
     compile 'com.mcxiaoke.volley:library:1.0.15'
     compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.android.support:support-v4:26.0.2'
     compile 'com.google.android.gms:play-services:8.3.0'
     compile 'com.facebook.android:facebook-android-sdk:4.7.0'
     compile 'com.google.android.gms:play-services-ads:8.3.0'
