--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,30 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
+
+
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:2.3.2'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
-
 allprojects {
     repositories {
+
+        maven { url 'https://jcenter.bintray.com' }
+
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
 dependencies {
 }
 
-//android {
-//    compileSdkVersion 17
-//    buildToolsVersion '23.0.0'
-//}
